--- a/Backened/package.json
+++ b/Backened/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tsc -b && node dist/index.js"
+    "build":"npx tsc -b",
+    "dev": "npx tsc -b && nodemon dist/index.js"
   },
   "keywords": [],
   "author": "",
